...
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        
        // Simulate a delay
        let when = DispatchTime.now() + 1
        DispatchQueue.main.asyncAfter(deadline: when) {
            self.label.text = "Country Name from ISO3 code"
        }
        
        // Simulate a delay
        let when2 = when + 1
        DispatchQueue.main.asyncAfter(deadline: when2) {
            self.textField.text = "Enter 3 letter Country Code"
        }
    }

    @IBAction func getCountryInfo(_ sender: UIButton) {
        if let cc = textField.text {
            getCountryDetails(country: cc.uppercased())
...
