...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Country Code (XXX)" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vUY-0W-xFX">
                                <rect key="frame" x="62" y="134" width="251" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="countryCodeField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="251" id="wHh-4p-B81"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" keyboardType="alphabet"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.93978220224380493" green="0.13649708032608032" blue="0.31650432944297791" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ni5-sm-3b8">
                                <rect key="frame" x="62" y="473" width="251" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="getCountryInfo"/>
                                <state key="normal" title="Get Country Info"/>
                                <connections>
                                    <action selector="getCountryInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="btI-es-zhw"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Country Info" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDe-r9-UVi">
...
